Epmrpp-84251 || merge to develop (#260)
* EPMRPP-80606 || Update item attribute key and value validation (#233)

EPMRPP-80606 || Update item attribute key and value validation

* EPMRPP-81360 || Fix vulnerabilities

* EPMRPP-82514 || Email sync doesn't work for existing LDAP users (#247)

* EPMRPP-82514 added email update and legacy code refactoring

* EPMRPP-82514 remove old comment

* EPMRPP-82549 added AdminPasswordInitializer for changing default password

* Update commons dao

* Merge master to 5.7.5 (#252)

* EPMRPP-79211 || Changed Minio interface to JCloud

* EPMRPP-79211 || Updated DataStore Configuration and properties

* EPMRPP-79211 || Updated commons-dao dependency

* Update commons dao dependency to 5.7.4

* Update release.yml

* EPMRPP-80865|| Update bom and other versions (#241)

5.7.4 || Update bom and other versions

* [Gradle Release Plugin] - new version commit:  '5.7.5'.

* EPMRPP-82673-exec-jar promote.yml update (added exec jar)

---------

Co-authored-by: Maksim Antonov <Maksim_Antonov@epam.com>
Co-authored-by: miracle8484 <76156909+miracle8484@users.noreply.github.com>
Co-authored-by: reportportal.io <support@reportportal.io>
Co-authored-by: rkukharenka <ryhor_kukharenka@epam.com>
Co-authored-by: Ryhor <125865748+rkukharenka@users.noreply.github.com>

* Update version

* EPMRPP-80498 || Expose saml leve session parameter

* EPMRPP-82707 || Add single bucket configuration (#253)

* EPMRPP-82707 || Add default value for feature flags

* Merge master to hotfix/next (#257)

* EPMRPP-79211 || Changed Minio interface to JCloud

* EPMRPP-79211 || Updated DataStore Configuration and properties

* EPMRPP-79211 || Updated commons-dao dependency

* Update commons dao dependency to 5.7.4

* Update release.yml

* EPMRPP-80865|| Update bom and other versions (#241)

5.7.4 || Update bom and other versions

* [Gradle Release Plugin] - new version commit:  '5.7.5'.

* EPMRPP-82673-exec-jar

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,10 +12,10 @@ rp:
   auth:
     saml:
       base-path: http://localhost:9999
-  binarystore:
-    type: filesystem
-    s3:
-      endpoint: http://localhost:9000
-      accessKey:
-      secretKey:
-    path: ${java.io.tmpdir}${file.separator}reportportal${file.separator}datastore
+
+datastore:
+  type: filesystem
+  path: ${java.io.tmpdir}${file.separator}reportportal${file.separator}datastore
+  endpoint: http://localhost:9000
+  accessKey:
+  secretKey:
