--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,21 +5,7 @@ info.build.repo=${repo}
 info.build.branch=${branch}
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=info, health
-datastore.default.path=\${rp.binarystore.path:/data/storage}
-datastore.s3.endpoint=\${rp.binarystore.s3.endpoint:https://play.min.io}
-datastore.s3.accessKey=\${rp.binarystore.s3.accessKey:}
-datastore.s3.secretKey=\${rp.binarystore.s3.secretKey:}
-datastore.s3.region=\${rp.binarystore.s3.region:#{null}}
-datastore.s3.bucketPrefix=\${rp.binarystore.s3.bucketPrefix:prj-}
-datastore.s3.defaultBucketName=\${rp.binarystore.s3.defaultBucketName:rp-bucket}
-datastore.minio.endpoint=\${rp.binarystore.minio.endpoint:https://play.min.io}
-datastore.minio.accessKey=\${rp.binarystore.minio.accessKey:}
-datastore.minio.secretKey=\${rp.binarystore.minio.secretKey:}
-datastore.minio.region=\${rp.binarystore.minio.region:#{null}}
-datastore.minio.bucketPrefix=\${rp.binarystore.minio.bucketPrefix:prj-}
-datastore.minio.defaultBucketName=\${rp.binarystore.minio.defaultBucketName:rp-bucket}
-# could be one of [filesystem, minio, s3]
-datastore.type=\${rp.binarystore.type:filesystem}
+rp.feature.flags=
 datastore.thumbnail.attachment.width=\${rp.binarystore.thumbnail.attachment.width:80}
 datastore.thumbnail.attachment.height=\${rp.binarystore.thumbnail.attachment.height:60}
 datastore.thumbnail.avatar.width=\${rp.binarystore.thumbnail.avatar.width:40}
